Added code to the HTML file, updated lists of HTML and Git

--- a/index.html
+++ b/index.html
@@ -12,7 +12,44 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contians information about the meta-data of the webpage</li>
+          <li>The body element contains all the elements on the webpage that users will be able to see.</li>
+          <li>Use Href with A elements, and src with Image elements.</li>
+          <li>When setting up the viewport and width of a page, always use name="viewport" and content="width=device-width, initial-scale=1.0"</li>
+        </ul>
+
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here.</li>
+        </ul>
+   
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>Use li to check which files are around you when exploring in bash.</li>
+          <li>Use git checkout -b branch name to create a new branch and move to it.</li>
+          <li>Use git checkout branch name to move to other branches</li>
+          <li>One can autofill names of repos using tab</li>
+          <li>Use Cd to change directories, and use cd .. to go back</li>
+        </ul>
+   
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your Javascript notes here</li>
+        </ul>
+   
+      </section>
     </main>
 
     <footer>
