--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -26,7 +27,11 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here.</li>
+          <li>A margin indicates how much space we want outisde of an element</li>
+          <li>Padding indicates how much space we want around the content INSIDE an element</li>
+          <li>CSS selectors can be used to select more than one element at once using a comma between them</li>
+          <li>All HTML elements are set as boxes on a webpage, and set as block by default, by setting elements as inline, one could set more than one element per line</li>
+          <li>Colors in CSS can be set semantically, using a hexcode, or by using rgb.</li>
         </ul>
    
       </section>
