--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your Javascript notes here</li>
+          <li>A variable is a named container that stores data in a code</li>
+          <li>Use Arrays to store large amounts of data in one variable</li>
+          <li>Arrays can be called upon in many different ways, with functions, or with loops</li>
+          <li>Control flow is the order in which a comptuer executes code in a script, it is from top to bottom. Like a book!</li>
         </ul>
    
       </section>
